# deu

./: README.md  pyproject.toml  setup.cfg
src/deu/: conn.py  cred.py  db.py  repo.py  util.py
test/deu/: util_test.py
