[metadata]
name = deu
version = 0.0.1
author = Andrew Hancock
author_email = andrewneilhancock@gmail.com
description = A Data Engineering Utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndrewHancock/deu
project_urls =
    Bug Tracker = https://github.com/AndrewHancock/deu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
